[package]
name = "argin"
description = "A very simple command line argument parser"
readme = "README.md"
version = "0.1.0"
edition = "2021"
authors = ["Prox"]
repository = "https://github.com/proxin187/argin"
keywords = ["parser", "cli", "parse", "argument", "arg"]
categories = ["command-line-interface", "command-line-utilities", "parsing"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
